# PortfolioTracker

./: .env.example  .gitignore  README.md  pyproject.toml
doc/: architecture.md
spec/: spec_alerts.md  spec_main.md  spec_orders.md  spec_performance.md
src/portfolio_management/: __init__.py  app.py  config.py
src/portfolio_management/db/: init_db.py  models.py  seed.py  session.py  types.py
src/portfolio_management/services/: accounts.py  alerts.py  analysis_filters.py  analytics.py  benchmarks.py  csv_exports.py  db_performance.py  import_errors.py  market_data.py  notifications.py  orders.py  performance.py  portfolio_recommendations.py  query_filters.py  rebalancing.py  reference_data.py  securities.py  transactions.py
src/portfolio_management/tabs/: _shared.py  accounts.py  alerts.py  brokers.py  dashboard.py  data_entry.py  export.py  market_data.py  orders.py  performance.py  portfolios.py  rebalance.py  securities.py  settings.py  tax.py
tests/: test_accounts.py  test_analytics.py  test_dashboard.py  test_data_entry.py  test_database.py  test_epic10.py  test_epic6.py  test_epic7.py  test_epic8.py  test_epic9.py  test_export.py  test_market_data.py  test_orders.py  test_performance.py  test_portfolio_recommendations.py  test_portfolios_tab.py  test_securities.py  test_security_details.py  test_transactions.py
